# cookiecutter-package

./: .editorconfig  .travis.yml  LICENSE  README.md  README.rst  cookiecutter.json  setup.cfg  setup.py  tox.ini
hooks/: post_gen_project.py  post_gen_project.sh  pre_gen_project.py  pre_gen_project.sh
{{cookiecutter.project_name}}/: .flake8  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_name}}/docs/source/: conf.py  index.rst  installation.rst
{{cookiecutter.project_name}}/requirements/: base.txt  dev.txt  publish.txt  test.txt
{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  _compat.py  base.py{% if cookiecutter.use_cython == 'y' %}x{% endif %}  cli.py  command.py  settings.py  {%  if cookiecutter.use_cython == 'y'%}base.pxd{% endif %}
