# Setup

[metadata]
description-file = README.rst

[bdist_wheel]
universal = 1

# Sphinx

[build_sphinx]
project = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
release = "{{ cookiecutter.version }}"
source-dir = docs/source
build-dir = docs/build
all_files = 1

[upload_sphinx]
upload-dir = docs/build/html

# Test

[flake8]
max-line-length = 120
ignore = W292,E303
exclude =
    __init__.py

# Bumpversion

[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:docs/source/conf.py]
search = version = "{current_version}"
    release = "{current_version}"
replace = version = "{new_version}"
    release = "{new_version}"

[bumpversion:file:{{cookiecutter.project_slug}}/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"
