# Setup

[metadata]
description-file = README.rst

[bdist_wheel]
universal = 1

# Sphinx

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[upload_sphinx]
upload-dir = docs/build/html

# Test

[flake8]
max-line-length = 120
ignore = W292,E303
exclude =
    __init__.py
    base.py
    setup.py

# Bumpversion

[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:docs/source/conf.py]

[bumpversion:file:{{cookiecutter.project_slug}}/__init__.py]
